# iron-librosa

./: .gitignore  .tmp_features_split_verify.txt  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_INDEX.md  EXACT_CHANGES_REFERENCE.md  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_TESTS_BENCHMARKS_2026-04-14.md  HOTFIX_VALIDATION_REPORT.md  INDEX_TESTS_BENCHMARKS_DOCUMENTATION.md  MAC_CHECKLIST.md  QUICK_REFERENCE_TESTS_BENCHMARKS.md  README.md  RELEASE_NOTES_PHASE_VOCODER.md  REVIEW_COMPLETE_FILES_CREATED.md  TEST_AND_BENCHMARK_STATUS_2026-04-14.md  VISUAL_SUMMARY_TESTS_BENCHMARKS.md  build.rs  cpu_complete_eval_20260404.txt  feature_test.txt  pyproject.toml  pytest.ini  results  run_full_tests.py  setup.cfg  test_hotfix_validation.py  test_rust_functions.py  validation_results.txt
.githooks/: pre-push
.github/: environment-docs.yml  environment-minimal.yml
Development_docs/: ACCELERATE_FFT_INTEGRATION_ATTEMPT.md  COMMIT_MESSAGE_PHASE_VOCODER.txt  COMPLETION_REPORT.md  CPU_COMPLETE_CHECKLIST.md  CPU_SIGNOFF_NOTE_2026-04-04.md  EXECUTIVE_SUMMARY.md  EXPANDED_USE_CASES.md  FEATURES_REMAINING.md  HOTFIX_QUICK_REFERENCE.txt  HOTFIX_VALIDATION_REPORT.md  INDEX.md  ISSUE_RESOLUTION.md  LIBROSA_RUST_COVERAGE_ROADMAP.md  MEL_MULTIHOST_THRESHOLD_CHECKLIST.md  NEXT_ACTIONS_PHASE13_PLANNING.md  PHASE10A_FINAL_REPORT.md  PHASE10A_PADDING_FIX.md  PHASE10A_STATUS.md  PHASE10B_BATCH_PARALLELISM_REPORT.md  PHASE10B_COMPLETION_CHECKLIST.md  PHASE10B_COMPLETION_REPORT.txt  PHASE10B_FINAL_SUMMARY.txt  PHASE10B_IMPLEMENTATION_SUMMARY.md  PHASE10C_COMPLETION_REPORT.md  PHASE10C_EXECUTIVE_SUMMARY.md  PHASE10C_PLAN.md  PHASE11_STATUS.md  PHASE12_CPU_REMAINING_PLAN.md  PHASE12_CQT_VQT_ACCELERATION_PLAN.md  PHASE12_TONNETZ_DECISION.md  PHASE13_CQT_VQT_COMPLETION_REPORT.md  PHASE13_CQT_VQT_SPIKE.md  PHASE14_BEAT_TRACK_COMPLETION_REPORT.md  PHASE14_BEAT_TRACK_KICKOFF.md  PHASE14_BEAT_TRACK_SEAM_CONTRACT.md  PHASE15_BEAT_UPSTREAM_COMPLETION_REPORT.md  PHASE16_COMMIT_CONSOLIDATION_ANALYSIS.md  PHASE16_GPU_DISPATCH_COMPLETION_REPORT.md  PHASE16_ONSET_TEMPO_KICKOFF.md  PHASE16_PROMOTION_DECISION.md  (+58 more)
docs/: conf.py
iron_librosa/: __init__.py
librosa/: _rust.cp313-win_amd64.pyd  _rust_bridge.py  beat.py  decompose.py  filters.py  onset.py
scripts/: benchmark_phase3_stft.py  benchmark_three_level.py  calibrate_gpu_work_threshold.py  calibrate_mel_threshold.py  generate_mel_evidence_addendum.py  generate_test_data.py  get_latest_release.sh  mel_threshold_registry.json  split_convert.py  split_convert_v2.py  split_spectral.py  split_spectrum_v2.py
src/: accelerate_fft.rs  backend.rs  beat.rs  chroma.rs  convert.rs  cqt_vqt.rs  cuda_fft.rs  cuda_fft_production.rs  cuda_kernels.cu  dct.rs  istft.rs  lib.rs  mel.rs  metal_fft.metal  metal_fft.rs  nn_filter.rs  onset.rs  phase_vocoder.rs  rhythm.rs  spectrum_utils.rs  stft.rs  tuning.rs
tests/: check_flatness.py  study_reflect_detailed.py  study_reflect_mode.py  test_beat.py  test_benchmark_guard_policy.py  test_benchmark_payload_schema.py  test_constantq.py  test_core.py  test_cuda_auto_dispatch.py  test_cuda_resident_constants.py  test_decompose.py  test_display.py  test_features.py  test_features_phase_stft.py  test_filters.py  test_flatness_full.py  test_gpu_threshold_calibration.py  test_median.py  test_median_filter_padding.py  test_mel_rust_device_override.py  test_mel_threshold_policy.py  test_metal_fft_dispatch.py  test_multichannel.py  test_onset.py  test_phase10a_hpss.py  test_phase10c_hpss_optimization.py  test_phase13_cqt_vqt_parity.py  test_phase13_rust_device_override.py  test_phase14_beat_parity.py  test_phase15_beat_upstream.py  test_phase21_cuda_benchmark_gate.py  test_phase5_tuning.py  (+18 more)
(+156 files in other folders)
