[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "iron-librosa"
version = "0.11.0"
description = "Python module for audio and music processing (Rust-accelerated drop-in replacement for librosa)"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Brian McFee, librosa development team", email = "brian.mcfee@nyu.edu" },
]
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "audioread >= 2.1.9",
    "numba >= 0.51.0",
    "numpy >= 1.22.3",
    "scipy >= 1.6.0",
    "scikit-learn >= 1.1.0",
    "joblib >= 1.0",
    "decorator >= 4.3.0",
    "soundfile >= 0.12.1",
    "pooch >= 1.1",
    "soxr >= 0.3.2",
    "typing_extensions >= 4.1.1",
    "lazy_loader >= 0.1",
    "msgpack >= 1.0",
    "standard-aifc; python_version >= '3.13'",
    "standard-sunau; python_version >= '3.13'",
]

[project.optional-dependencies]
tests = [
    "matplotlib >= 3.5.0",
    "packaging >= 20.0",
    "pytest-mpl",
    "pytest-cov",
    "pytest",
    "samplerate",
    "resampy >= 0.2.2",
    "types-decorator",
]
docs = [
    "numpydoc",
    "sphinx != 1.3.1",
    "sphinx_rtd_theme >= 1.2.0",
    "numba >= 0.51",
    "matplotlib >= 3.5.0",
    "sphinx-multiversion >= 0.2.3",
    "sphinx-gallery >= 0.7",
    "mir_eval >= 0.5",
    "ipython >= 7.0",
    "sphinxcontrib-svg2pdfconverter",
    "sphinxcontrib-googleanalytics >= 0.4",
    "presets",
    "sphinx-copybutton >= 0.5.2",
]
display = ["matplotlib >= 3.5.0"]

[project.urls]
Documentation = "https://librosa.org/doc"
Source = "https://github.com/librosa/librosa"
Tracker = "https://github.com/librosa/librosa/issues"

[tool.maturin]
# Compile the Rust crate as the `librosa._rust` extension module
module-name = "librosa._rust"
# Include both Python packages in the wheel
python-packages = ["librosa", "iron_librosa"]
features = ["pyo3/extension-module"]
